--- a/main.less
+++ b/main.less
@@ -2,6 +2,8 @@
 html, body, div, p, ul, li, dl, dt, dd, h1, h2, h3, h4, h5, h6, form, input, select, button, textarea, iframe, table, th, td { 
 	margin: 0; 
 	padding: 0; 
+	word-break: break-all;
+    word-wrap: break-word;
 } 
 img { 
 	border: 0 none; 
