--- a/src/less/main.less
+++ b/src/less/main.less
@@ -2,6 +2,8 @@
 html, body, div, p, ul, li, dl, dt, dd, h1, h2, h3, h4, h5, h6, form, input, select, button, textarea, iframe, table, th, td { 
 	margin: 0; 
 	padding: 0; 
+	word-break: break-all;
+    word-wrap: break-word;
 } 
 img { 
 	border: 0 none; 
@@ -84,6 +86,12 @@ a:focus {
 	margin: auto;
 	width: 1330px;
 	min-width: 1330px;
+}
+.w1190 {
+	overflow: hidden;
+	margin: auto;
+	width: 1190px;
+	min-width: 1190px;
 }
 .oh {
 	overflow: hidden;
